清理代码 新增主题 默认使用HarmonyOSSans字体渲染